// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test writeSmartLinksConfig Add fioriSandboxConfig.json - none existing 1`] = `
Object {
  "mockBasePath/appconfig/fioriSandboxConfig.json": Object {
    "contents": "{
    \\"services\\": {
        \\"ClientSideTargetResolution\\": {
            \\"adapter\\": {
                \\"config\\": {
                    \\"inbounds\\": { 
                        \\"ResponseMapping\\": {
                            \\"semanticObject\\": \\"MockObject1\\",
                            \\"action\\": \\"MockAction1\\",   
                            \\"signature\\": {\\"additionalParameters\\":\\"allowed\\",\\"parameters\\":{\\"app-id\\":{\\"required\\":true}}}, 
                            \\"resolutionResult\\":  {}
                        }  
                    }
                }
            }
        }
    }
}",
    "state": "modified",
  },
}
`;

exports[`Test writeSmartLinksConfig Overwrite fioriSandboxConfig.json - existing target with same key 1`] = `
Object {
  "mockBasePath/appconfig/fioriSandboxConfig.json": Object {
    "contents": "{
  \\"services\\": {
    \\"ClientSideTargetResolution\\": {
      \\"adapter\\": {
        \\"config\\": {
          \\"inbounds\\": {
            \\"existingInboundTargets\\": {
              \\"semanticObject\\": \\"ExistingSemanticObject\\",
              \\"action\\": \\"ExistingAction\\",
              \\"signature\\": {},
              \\"resolutionResult\\": {}
            },
            \\"ResponseMapping\\": {
              \\"semanticObject\\": \\"MockObject1\\",
              \\"action\\": \\"MockAction1\\",
              \\"signature\\": {
                \\"additionalParameters\\": \\"allowed\\",
                \\"parameters\\": {
                  \\"app-id\\": {
                    \\"required\\": true
                  }
                }
              },
              \\"resolutionResult\\": {}
            }
          }
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;

exports[`Test writeSmartLinksConfig Update fioriSandboxConfig.json - existing target 1`] = `
Object {
  "mockBasePath/appconfig/fioriSandboxConfig.json": Object {
    "contents": "{
  \\"services\\": {
    \\"ClientSideTargetResolution\\": {
      \\"adapter\\": {
        \\"config\\": {
          \\"inbounds\\": {
            \\"existingInboundTargets\\": {
              \\"semanticObject\\": \\"ExistingSemanticObject\\",
              \\"action\\": \\"ExistingAction\\",
              \\"signature\\": {
                \\"additionalParameters\\": \\"allowed\\"
              },
              \\"resolutionResult\\": {}
            },
            \\"ResponseMapping\\": {
              \\"semanticObject\\": \\"MockObject1\\",
              \\"action\\": \\"MockAction1\\",
              \\"signature\\": {
                \\"additionalParameters\\": \\"allowed\\",
                \\"parameters\\": {
                  \\"app-id\\": {
                    \\"required\\": true
                  }
                }
              },
              \\"resolutionResult\\": {}
            }
          }
        }
      }
    }
  }
}
",
    "state": "modified",
  },
}
`;
